@@ -1,8 +1,10 @@
-CHANGES.txt - 2011-06-08
+CHANGES.txt - 2011-06-10
 ------------------------
 
 CHANGES IN CUPS V1.5rc1
 
+	- The scheduler incorrectly allowed jobs to be held outside the pending
+	  or pending-held states.
 	- The cups-driverd program could crash when a PPD was renamed.
 	- The dnssd backend took too long to discover printers on large or busy
 	  networks with the new default timeout used by lpinfo and the web
